fix collapse css

--- a/avAdmin/admin-directives/abstract-setting/abstract-setting.less
+++ b/avAdmin/admin-directives/abstract-setting/abstract-setting.less
@@ -16,6 +16,10 @@
 **/ 
 
 [av-abstract-setting] {
+  .collapse-icon {
+    width: 24px;
+  }
+
   .expanded-glyphicon {
     font-size: large;
     margin: 5px 0px 0px 5px;
